--- a/over-mij.html
+++ b/over-mij.html
@@ -52,10 +52,7 @@
                             <img src="assets/19.png" alt="foto van mezelf">
                    </div>
                </section>
-        <section id="text-section-werk">
-            <div>
-                <p id="timer"></p>
-            </div>
+        <section class="text-section-werk">
             <div class="image-row">
                 <img class="image" src="assets/05.png" alt="wit gebouw">
                 <img class="image" src="assets/09.png" alt="bloemen">
