--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,24 @@
                 <img src="assets/18.png" alt="social media">
                 </div>
             </section>
-        <section id="projecten">
-            <div id="image-portfolio">
-                <img id="beer" src="assets/26.png" alt="beer">
-                <img id="b"  src="assets/27.png" alt="b">
+        <section class="text-section-werk">
+            <div class="image-row">
+                <img class="image" src="assets/05.png" alt="wit gebouw">
+                <img class="image" src="assets/09.png" alt="bloemen">
+                <img class="image" src="assets/15.png" alt="wit gebouw met veel ramen">
+                <img class="image" src="assets/16.png" alt="kleed van het modemuseum">
             </div>
-            <div id="project">
-                <img id="wouters" src="assets/25.png" alt="wouters">
+            <div class="image-row">
+                <img class="image" src="assets/08.png" alt="strand in Calais">
+                <img class="image" src="assets/12.png" alt="kerk in Kroatië">
+                <img class="image" src="assets/13.png" alt="Lila de puppy">
+                <img class="image" src="assets/17.png" alt="markt Leuven">
+            </div>
+            <div class="image-row">
+                <img class="image" src="assets/07.png" alt="antwerpen">
+                <img class="image" src="assets/14.png" alt="Milly de kat">
+                <img class="image" src="assets/06.png" alt="gebouw en lucht">
+                <img class="image" src="assets/04.png" alt="gebouw">
             </div>
         </section>
     </main>
